// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component is embedded in working providers 1`] = `
.emotion-0 {
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 32px;
  padding-right: 40px;
  min-height: unset;
  width: 100%;
  border-bottom: 1px solid #d8ebe9;
}

@media (min-width:600px) {
  .emotion-0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:0px) {
  @media (orientation: landscape) {
    .emotion-0 {
      min-height: 48px;
    }
  }
}

@media (min-width:600px) {
  .emotion-0 {
    min-height: 64px;
  }
}

.emotion-1 {
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 240px;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  margin-top: 18px;
}

.emotion-1 input {
  font-size: 13px;
}

.emotion-2 {
  line-height: 1.4375em;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
  color: rgba(10, 10, 11, 0.78);
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

label+.emotion-2 {
  margin-top: 16px;
}

.emotion-2::after {
  border-bottom: 2px solid #337a87;
  left: 0;
  bottom: 0;
  content: "";
  position: absolute;
  right: 0;
  -webkit-transform: scaleX(0);
  -moz-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-2.Mui-focused:after {
  -webkit-transform: scaleX(1) translateX(0);
  -moz-transform: scaleX(1) translateX(0);
  -ms-transform: scaleX(1) translateX(0);
  transform: scaleX(1) translateX(0);
}

.emotion-2.Mui-error::before,
.emotion-2.Mui-error::after {
  border-bottom-color: #ab1000;
}

.emotion-2::before {
  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  left: 0;
  bottom: 0;
  content: "\\00a0";
  position: absolute;
  right: 0;
  -webkit-transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-2:hover:not(.Mui-disabled, .Mui-error):before {
  border-bottom: 2px solid rgba(10, 10, 11, 0.78);
}

@media (hover: none) {
  .emotion-2:hover:not(.Mui-disabled, .Mui-error):before {
    border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  }
}

.emotion-2.Mui-disabled:before {
  border-bottom-style: dotted;
}

.emotion-2:before {
  border-bottom: 1px solid rgb(224, 224, 224);
}

.emotion-2:hover:not($disabled):before {
  border-bottom: 2px solid #337a87!important;
}

.emotion-2:after {
  border-bottom: 2px solid #337a87;
}

.emotion-3 {
  display: flex;
  height: 0.01em;
  max-height: 2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: rgba(0, 0, 0, 0.54);
  margin-right: 8px;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-4 iconButton {
  margin-right: 8px;
}

.emotion-5 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
  padding-top: 1px;
}

.emotion-5::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5:focus {
  outline: 0;
}

.emotion-5:invalid {
  box-shadow: none;
}

.emotion-5::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-5.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-5:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-6 iconButton {
  margin-right: 8px;
}

.emotion-7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 20px;
  color: #e9e9e9;
  margin: 0 7px 0 10px;
  top: 5px;
}

.emotion-7 iconButton {
  margin-right: 8px;
}

.emotion-8 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 2px;
  padding: 10px 15px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #337a87;
  font-family: Lato,sans-serif;
  font-weight: bold;
  font-size: 14px;
  line-height: 1.75;
  text-transform: none;
  min-width: 64px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: 100%;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(51, 122, 135, 0.04);
}

@media (hover: none) {
  .emotion-8:hover {
    background-color: transparent;
  }
}

.emotion-8.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-8:hover {
  colors: #337a87;
}

.emotion-8.MuiButton-text {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-8 .MuiMenuItem-root:hover,
.emotion-8 .MuiListItemText-root:hover {
  color: #679ba5;
}

.emotion-9 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-9>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
  color: #cfcfcf;
}

.emotion-10 iconButton {
  margin-right: 8px;
}

.emotion-11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-12 {
  background-color: #f7f7f7;
  border-right: 1px solid #e6f2f1;
}

.emotion-13 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-14 {
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 11px;
  padding-bottom: 11px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 22px 16px 22px 42px;
}

.emotion-14.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-14.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-14.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-14.Mui-disabled {
  opacity: 0.38;
}

.emotion-14.Mui-disabled {
  opacity: 1;
}

.emotion-14.active {
  background-color: #fff;
}

.emotion-14.leftNav.active {
  border-top: 1px solid #d4e9e7;
  border-bottom: 1px solid #d4e9e7;
}

.emotion-14.navLink,
.emotion-14.navLink .MuiListItemText-root {
  color: #969696;
}

.emotion-15 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
}

.emotion-16 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
  display: block;
}

.emotion-17 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: absolute;
  padding-top: 8px;
  padding-bottom: 8px;
  bottom: 30px;
  left: 0;
  right: 0;
}

.emotion-18 {
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 11px;
  padding-bottom: 11px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 16px 16px 16px 42px;
}

.emotion-18.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-18.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-18.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-18.Mui-disabled {
  opacity: 0.38;
}

.emotion-18.Mui-disabled {
  opacity: 1;
}

.emotion-18.active {
  background-color: #fff;
}

.emotion-18.leftNav.active {
  border-top: 1px solid #d4e9e7;
  border-bottom: 1px solid #d4e9e7;
}

.emotion-18.navLink,
.emotion-18.navLink .MuiListItemText-root {
  color: #969696;
}

.emotion-22 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
}

.emotion-24 {
  margin: 0;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.8125rem;
  line-height: 1.43;
  color: rgba(0, 0, 0, 0.54);
  display: block;
}

.emotion-25 {
  font-size: 13px;
  position: relative;
  top: 6px;
  color: #337a87;
}

.emotion-26 {
  -webkit-column-gap: 48px;
  column-gap: 48px;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 48px;
}

.emotion-27 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  min-width: 60vw;
  display: flex;
  position: relative;
  row-gap: 48px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1536px) {
  .emotion-27 {
    min-width: 50vw;
  }
}

.emotion-28 {
  gap: 16px;
}

.emotion-29 {
  max-width: 100%;
  font-family: Lato,sans-serif;
  font-size: 0.7545rem;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: rgba(0, 0, 0, 0.38);
  background-color: #f7fafb;
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: unset;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  text-transform: uppercase;
}

.emotion-29.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-29 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #bcbcbc;
  font-size: 0.6964rem;
}

.emotion-29 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: rgb(35, 85, 94);
}

.emotion-29 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: rgb(65, 10, 46);
}

.emotion-29 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.5804rem;
}

.emotion-29 .MuiChip-icon {
  margin-left: 5px;
  margin-right: -6px;
  color: #bcbcbc;
}

.emotion-29 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(10, 10, 11, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-29 .MuiChip-deleteIcon:hover {
  color: rgba(10, 10, 11, 0.4);
}

.emotion-29:hover {
  font-weight: bold;
}

.emotion-29:hover {
  font-weight: bold;
}

.emotion-30 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
}

.emotion-31 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
  color: #337a87;
}

.emotion-31 iconButton {
  margin-right: 8px;
}

.emotion-31.read {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-32 {
  position: absolute;
  top: -5px;
  bottom: 0;
  left: -5px;
  right: -5px;
  border: 1px dashed #337a87;
  border-radius: 50%;
}

.emotion-32.read {
  border-color: rgba(0, 0, 0, 0.38);
}

.emotion-33 {
  font-size: 1rem;
  cursor: pointer;
}

.emotion-36 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 400px;
  border: none;
  padding-left: 0;
  padding-top: 0;
}

.emotion-36 .deployments .dashboard>h4 {
  margin-top: 48px;
}

.emotion-36 .deployments .dashboard>h4.margin-top-none {
  margin-top: 0;
}

@media (min-width:1536px) {
  .emotion-36 {
    border-left: 1px solid #e9e9e9;
    margin-top: -16px;
    padding-left: 48px;
    padding-top: 16px;
  }

  .emotion-36 .deployments .dashboard>h4 {
    margin-top: 0;
  }
}

.emotion-37 {
  position: fixed;
  display: grid;
  bottom: 0;
  grid-template-rows: min-content;
  height: max-content;
  padding: 0 16pxpx;
  overflow: hidden;
  width: 100%;
  z-iindex: 10000px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

<div>
  <div
    id="app"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular emotion-0"
      id="fixedHeader"
    >
      <div
        class="flexbox space-between"
      >
        <div
          class="flexbox center-aligned"
        >
          <a
            href="/"
          >
            <img
              id="logo"
              src="headerlogo.png"
            />
          </a>
        </div>
        <form
          novalidate=""
        >
          <div
            class="MuiFormControl-root MuiTextField-root emotion-1"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart emotion-2"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeSmall emotion-3"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeSmall emotion-4"
                  data-testid="SearchIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart emotion-5"
                id=":rl:"
                name="search"
                placeholder="Search devices"
                type="text"
                value=""
              />
            </div>
          </div>
          <input
            class="hidden"
            type="submit"
          />
        </form>
        <div
          class="flexbox center-aligned"
        >
          <div
            class="header-section"
          >
            <a
              class=""
              href="/devices"
            >
              <span>
                0
              </span>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
                data-testid="DeveloperBoardIcon"
                focusable="false"
                style="margin: 0px 7px 0px 10px; font-size: 20px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22 9V7h-2V5c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-2h2v-2h-2v-2h2v-2h-2V9zm-4 10H4V5h14zM6 13h5v4H6zm6-6h4v3h-4zM6 7h5v5H6zm6 4h4v6h-4z"
                />
              </svg>
            </a>
          </div>
          <a
            class="header-section"
            href="/deployments/active"
          >
            <span>
              0
            </span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium flip-horizontal emotion-7"
              data-testid="RefreshIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
              />
            </svg>
          </a>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-8"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-9"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-10"
                data-testid="AccountCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root emotion-11"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="leftFixed leftNav emotion-12"
    >
      <ul
        class="MuiList-root MuiList-padding emotion-13"
        style="padding: 0px;"
      >
        <a
          aria-current="page"
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-14 active"
          href="/"
        >
          <div
            class="MuiListItemText-root emotion-15"
            style="text-transform: uppercase;"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Dashboard
            </span>
          </div>
        </a>
      </ul>
      <ul
        class="MuiList-root MuiList-padding emotion-17"
      >
        <a
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-18"
          href="/help"
        >
          <div
            class="MuiListItemText-root emotion-15"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Help & support
            </span>
          </div>
        </a>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding emotion-18"
        >
          <div
            class="MuiListItemText-root MuiListItemText-multiline emotion-22"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              <div
                class="clickable slightly-smaller"
                data-mui-internal-clone-element="true"
              >
                Version: next
              </div>
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-24"
            >
              <a
                class="emotion-25"
                href="https://docs.mender.io/development/release-information/open-source-licenses"
                rel=""
                target="_blank"
              >
                License information
              </a>
            </p>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="rightFluid container"
    >
      <h4
        class="margin-left-small"
      >
        Dashboard
      </h4>
      <div
        class="emotion-26"
      >
        <div
          class="emotion-27"
        >
          <div
            class="dashboard"
          >
            <div
              class="widget "
            >
              <div
                class="flexbox widgetHeader"
              >
                <div
                  class="flexbox center-aligned"
                >
                  Accepted devices 
                </div>
              </div>
              <div
                class="flexbox column widgetMainContent"
              >
                <div
                  class="counter"
                >
                  0
                </div>
              </div>
            </div>
          </div>
          <div
            class="dashboard margin-bottom-large"
          >
            <div
              class="widget"
            >
              <div
                class="flexbox center-aligned  emotion-28"
                style="align-items: end;"
              >
                <div
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault emotion-29"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelMedium emotion-30"
                    >
                      Enterprise
                    </span>
                  </div>
                </div>
                <div
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="relative"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium  emotion-31"
                      data-testid="HelpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                      />
                    </svg>
                    <div
                      class="emotion-32 "
                    />
                  </div>
                </div>
              </div>
              <div
                class="flexbox centered muted emotion-33"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                  />
                </svg>
                <span
                  class="emotion-33"
                >
                  add a widget
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-36 deployments"
        >
          <div
            class="loaderContainer"
          >
            <div
              class="  loader"
            >
              <span
                class="dot dot_1"
              />
              <span
                class="dot dot_2"
              />
              <span
                class="dot dot_3"
              />
              <span
                class="dot dot_4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-37"
  />
</div>
`;

exports[`App Component renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: relative;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 32px;
  padding-right: 40px;
  min-height: unset;
  width: 100%;
  border-bottom: 1px solid #d8ebe9;
}

@media (min-width:600px) {
  .emotion-0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:0px) {
  @media (orientation: landscape) {
    .emotion-0 {
      min-height: 48px;
    }
  }
}

@media (min-width:600px) {
  .emotion-0 {
    min-height: 64px;
  }
}

.emotion-1 {
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 240px;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  margin-top: 18px;
}

.emotion-1 input {
  font-size: 13px;
}

.emotion-2 {
  line-height: 1.4375em;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
  color: rgba(10, 10, 11, 0.78);
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2.Mui-disabled {
  color: rgba(0, 0, 0, 0.38);
  cursor: default;
}

label+.emotion-2 {
  margin-top: 16px;
}

.emotion-2::after {
  border-bottom: 2px solid #337a87;
  left: 0;
  bottom: 0;
  content: "";
  position: absolute;
  right: 0;
  -webkit-transform: scaleX(0);
  -moz-transform: scaleX(0);
  -ms-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-2.Mui-focused:after {
  -webkit-transform: scaleX(1) translateX(0);
  -moz-transform: scaleX(1) translateX(0);
  -ms-transform: scaleX(1) translateX(0);
  transform: scaleX(1) translateX(0);
}

.emotion-2.Mui-error::before,
.emotion-2.Mui-error::after {
  border-bottom-color: #ab1000;
}

.emotion-2::before {
  border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  left: 0;
  bottom: 0;
  content: "\\00a0";
  position: absolute;
  right: 0;
  -webkit-transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: border-bottom-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.emotion-2:hover:not(.Mui-disabled, .Mui-error):before {
  border-bottom: 2px solid rgba(10, 10, 11, 0.78);
}

@media (hover: none) {
  .emotion-2:hover:not(.Mui-disabled, .Mui-error):before {
    border-bottom: 1px solid rgba(0, 0, 0, 0.42);
  }
}

.emotion-2.Mui-disabled:before {
  border-bottom-style: dotted;
}

.emotion-2:before {
  border-bottom: 1px solid rgb(224, 224, 224);
}

.emotion-2:hover:not($disabled):before {
  border-bottom: 2px solid #337a87!important;
}

.emotion-2:after {
  border-bottom: 2px solid #337a87;
}

.emotion-3 {
  display: flex;
  height: 0.01em;
  max-height: 2em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  color: rgba(0, 0, 0, 0.54);
  margin-right: 8px;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
  color: rgba(0, 0, 0, 0.26);
}

.emotion-4 iconButton {
  margin-right: 8px;
}

.emotion-5 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 4px 0 5px;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: 1.4375em;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
  padding-top: 1px;
}

.emotion-5::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-5:focus {
  outline: 0;
}

.emotion-5:invalid {
  box-shadow: none;
}

.emotion-5::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-5:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-5.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: rgba(0, 0, 0, 0.38);
}

.emotion-5:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-6 iconButton {
  margin-right: 8px;
}

.emotion-7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 20px;
  color: #e9e9e9;
  margin: 0 7px 0 10px;
  top: 5px;
}

.emotion-7 iconButton {
  margin-right: 8px;
}

.emotion-8 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 2px;
  padding: 10px 15px;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #337a87;
  font-family: Lato,sans-serif;
  font-weight: bold;
  font-size: 14px;
  line-height: 1.75;
  text-transform: none;
  min-width: 64px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  height: 100%;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(51, 122, 135, 0.04);
}

@media (hover: none) {
  .emotion-8:hover {
    background-color: transparent;
  }
}

.emotion-8.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
}

.emotion-8:hover {
  colors: #337a87;
}

.emotion-8.MuiButton-text {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-8 .MuiMenuItem-root:hover,
.emotion-8 .MuiListItemText-root:hover {
  color: #679ba5;
}

.emotion-9 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-9>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
  color: #cfcfcf;
}

.emotion-10 iconButton {
  margin-right: 8px;
}

.emotion-11 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-12 {
  background-color: #f7f7f7;
  border-right: 1px solid #e6f2f1;
}

.emotion-13 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: relative;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-14 {
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 11px;
  padding-bottom: 11px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 22px 16px 22px 42px;
}

.emotion-14.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-14.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-14.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-14.Mui-disabled {
  opacity: 0.38;
}

.emotion-14.Mui-disabled {
  opacity: 1;
}

.emotion-14.active {
  background-color: #fff;
}

.emotion-14.leftNav.active {
  border-top: 1px solid #d4e9e7;
  border-bottom: 1px solid #d4e9e7;
}

.emotion-14.navLink,
.emotion-14.navLink .MuiListItemText-root {
  color: #969696;
}

.emotion-15 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
}

.emotion-16 {
  margin: 0;
  line-height: 1.5;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.9286rem;
  display: block;
}

.emotion-29 {
  list-style: none;
  margin: 0;
  padding: 0;
  position: absolute;
  padding-top: 8px;
  padding-bottom: 8px;
  bottom: 30px;
  left: 0;
  right: 0;
}

.emotion-30 {
  display: flex;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 100%;
  box-sizing: border-box;
  text-align: left;
  padding-top: 11px;
  padding-bottom: 11px;
  padding-left: 16px;
  padding-right: 16px;
  padding: 16px 16px 16px 42px;
}

.emotion-30.Mui-focusVisible {
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-30.Mui-selected {
  background-color: rgba(51, 122, 135, 0.08);
}

.emotion-30.Mui-selected.Mui-focusVisible {
  background-color: rgba(51, 122, 135, 0.2);
}

.emotion-30.Mui-disabled {
  opacity: 0.38;
}

.emotion-30.Mui-disabled {
  opacity: 1;
}

.emotion-30.active {
  background-color: #fff;
}

.emotion-30.leftNav.active {
  border-top: 1px solid #d4e9e7;
  border-bottom: 1px solid #d4e9e7;
}

.emotion-30.navLink,
.emotion-30.navLink .MuiListItemText-root {
  color: #969696;
}

.emotion-34 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  min-width: 0;
  margin-top: 0;
  margin-bottom: 0;
  color: rgba(10, 10, 11, 0.78);
}

.emotion-36 {
  margin: 0;
  font-family: Lato,sans-serif;
  font-weight: 400;
  font-size: 0.8125rem;
  line-height: 1.43;
  color: rgba(0, 0, 0, 0.54);
  display: block;
}

.emotion-37 {
  font-size: 13px;
  position: relative;
  top: 6px;
  color: #337a87;
}

.emotion-38 {
  -webkit-column-gap: 48px;
  column-gap: 48px;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-bottom: 48px;
}

.emotion-39 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  min-width: 60vw;
  display: flex;
  position: relative;
  row-gap: 48px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1536px) {
  .emotion-39 {
    min-width: 50vw;
  }
}

.emotion-41 {
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: #337a87;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 50%;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  font-family: Lato,sans-serif;
  font-weight: 500;
  font-size: 0.8125rem;
  line-height: 1.75;
  text-transform: uppercase;
  min-height: 36px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  min-width: 0;
  width: 56px;
  height: 56px;
  z-index: 1;
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
  top: -28px;
  right: 16px;
}

.emotion-41::-moz-focus-inner {
  border-style: none;
}

.emotion-41.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-41 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-41:active {
  box-shadow: 0px 7px 8px -4px rgba(0,0,0,0.2),0px 12px 17px 2px rgba(0,0,0,0.14),0px 5px 22px 4px rgba(0,0,0,0.12);
}

.emotion-41:hover {
  background-color: #f5f5f5;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover: none) {
  .emotion-41:hover {
    background-color: #e6f2f1;
  }
}

.emotion-41.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-41:hover {
  background-color: rgb(35, 85, 94);
}

@media (hover: none) {
  .emotion-41:hover {
    background-color: #337a87;
  }
}

.emotion-41.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-44 {
  gap: 16px;
}

.emotion-45 {
  max-width: 100%;
  font-family: Lato,sans-serif;
  font-size: 0.7545rem;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  color: rgba(0, 0, 0, 0.38);
  background-color: #f7fafb;
  border-radius: 16px;
  white-space: nowrap;
  -webkit-transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  cursor: unset;
  outline: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 0;
  padding: 0;
  vertical-align: middle;
  box-sizing: border-box;
  text-transform: uppercase;
}

.emotion-45.Mui-disabled {
  opacity: 0.38;
  pointer-events: none;
}

.emotion-45 .MuiChip-avatar {
  margin-left: 5px;
  margin-right: -6px;
  width: 24px;
  height: 24px;
  color: #bcbcbc;
  font-size: 0.6964rem;
}

.emotion-45 .MuiChip-avatarColorPrimary {
  color: #fff;
  background-color: rgb(35, 85, 94);
}

.emotion-45 .MuiChip-avatarColorSecondary {
  color: #fff;
  background-color: rgb(65, 10, 46);
}

.emotion-45 .MuiChip-avatarSmall {
  margin-left: 4px;
  margin-right: -4px;
  width: 18px;
  height: 18px;
  font-size: 0.5804rem;
}

.emotion-45 .MuiChip-icon {
  margin-left: 5px;
  margin-right: -6px;
  color: #bcbcbc;
}

.emotion-45 .MuiChip-deleteIcon {
  -webkit-tap-highlight-color: transparent;
  color: rgba(10, 10, 11, 0.26);
  font-size: 22px;
  cursor: pointer;
  margin: 0 5px 0 -6px;
}

.emotion-45 .MuiChip-deleteIcon:hover {
  color: rgba(10, 10, 11, 0.4);
}

.emotion-45:hover {
  font-weight: bold;
}

.emotion-45:hover {
  font-weight: bold;
}

.emotion-46 {
  overflow: hidden;
  text-overflow: ellipsis;
  padding-left: 12px;
  padding-right: 12px;
  white-space: nowrap;
}

.emotion-47 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
  color: #337a87;
}

.emotion-47 iconButton {
  margin-right: 8px;
}

.emotion-47.read {
  color: rgba(0, 0, 0, 0.38);
}

.emotion-48 {
  position: absolute;
  top: -5px;
  bottom: 0;
  left: -5px;
  right: -5px;
  border: 1px dashed #337a87;
  border-radius: 50%;
}

.emotion-48.read {
  border-color: rgba(0, 0, 0, 0.38);
}

.emotion-49 {
  font-size: 1rem;
  cursor: pointer;
}

.emotion-52 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 400px;
  border: none;
  padding-left: 0;
  padding-top: 0;
}

.emotion-52 .deployments .dashboard>h4 {
  margin-top: 48px;
}

.emotion-52 .deployments .dashboard>h4.margin-top-none {
  margin-top: 0;
}

@media (min-width:1536px) {
  .emotion-52 {
    border-left: 1px solid #e9e9e9;
    margin-top: -16px;
    padding-left: 48px;
    padding-top: 16px;
  }

  .emotion-52 .deployments .dashboard>h4 {
    margin-top: 0;
  }
}

.emotion-53 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f7f7f7;
  border-radius: 8px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  display: grid;
  grid-template-columns: 200px 1fr;
  max-width: 500px;
  padding: 8px;
}

.emotion-53>div:last-child {
  width: 100%;
}

.emotion-54 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: inherit;
}

.emotion-54 iconButton {
  margin-right: 8px;
}

.emotion-58 {
  background-color: #f7f7f7;
  padding: 10px 20px;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  min-height: 70px;
}

.emotion-58 .chart-container {
  min-height: 70px;
}

.emotion-58 .progress-chart {
  min-height: 45px;
}

.emotion-58 .compact .progress-step,
.emotion-58 .detailed .progress-step {
  min-height: 45px;
}

.emotion-58 .progress-step,
.emotion-58 .detailed .progress-step-total {
  position: absolute;
  border-right-style: none;
}

.emotion-58 .progress-step-total .progress-bar {
  background-color: #d4e9e7;
}

.emotion-58 .progress-step-number {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: flex-start;
  align-self: flex-start;
  margin-top: -4px;
}

.emotion-58.minimal {
  padding: initial;
}

.emotion-58.no-background {
  background: none;
}

.emotion-58.stepped-progress .progress-step-total {
  margin-left: -0.25%;
  width: 100.5%;
}

.emotion-58.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border: 1px solid #a9a9a9;
  border-radius: 2px;
  height: 12px;
}

.emotion-58.stepped-progress .detailed .progress-step {
  min-height: 20px;
}

.emotion-61 {
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 500px;
}

.emotion-61>time {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  margin-right: 6px;
}

.emotion-63 {
  background: #fff;
  border-radius: 4px;
  padding: 4px;
}

.emotion-64 {
  -webkit-column-gap: 8px;
  column-gap: 8px;
  display: grid;
  grid-template-columns: repeat(auto-fit, 32px);
}

.emotion-64>div {
  -webkit-column-gap: 4px;
  column-gap: 4px;
}

.emotion-64 .disabled {
  opacity: 0.1;
}

<div
    id="app"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular emotion-0"
      id="fixedHeader"
    >
      <div
        class="flexbox space-between"
      >
        <div
          class="flexbox center-aligned"
        >
          <a
            href="/"
          >
            <img
              id="logo"
              src="headerlogo.png"
            />
          </a>
        </div>
        <form
          novalidate=""
        >
          <div
            class="MuiFormControl-root MuiTextField-root emotion-1"
          >
            <div
              class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart emotion-2"
            >
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeSmall emotion-3"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeSmall emotion-4"
                  data-testid="SearchIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                  />
                </svg>
              </div>
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart emotion-5"
                id=":r0:"
                name="search"
                placeholder="Search devices"
                type="text"
                value=""
              />
            </div>
          </div>
          <input
            class="hidden"
            type="submit"
          />
        </form>
        <div
          class="flexbox center-aligned"
        >
          <div
            class="header-section"
            data-mui-internal-clone-element="true"
          >
            <a
              class=""
              href="/devices"
            >
              <span>
                2
              </span>
              <span
                id="limit"
              >
                /500
              </span>
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
                data-testid="DeveloperBoardIcon"
                focusable="false"
                style="margin: 0px 7px 0px 10px; font-size: 20px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22 9V7h-2V5c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-2h2v-2h-2v-2h2v-2h-2V9zm-4 10H4V5h14zM6 13h5v4H6zm6-6h4v3h-4zM6 7h5v5H6zm6 4h4v6h-4z"
                />
              </svg>
            </a>
            <a
              href="/devices/pending"
              style="margin-left: 7px;"
            >
              1 pending
            </a>
          </div>
          <a
            class="header-section"
            href="/deployments/active"
          >
            <span>
              2
            </span>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium flip-horizontal emotion-7"
              data-testid="RefreshIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4z"
              />
            </svg>
          </a>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary emotion-8"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium emotion-9"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-10"
                data-testid="AccountCircleIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 4c1.93 0 3.5 1.57 3.5 3.5S13.93 13 12 13s-3.5-1.57-3.5-3.5S10.07 6 12 6m0 14c-2.03 0-4.43-.82-6.14-2.88C7.55 15.8 9.68 15 12 15s4.45.8 6.14 2.12C16.43 19.18 14.03 20 12 20"
                />
              </svg>
            </span>
            a@b.com
            <span
              class="MuiTouchRipple-root emotion-11"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="leftFixed leftNav emotion-12"
    >
      <ul
        class="MuiList-root MuiList-padding emotion-13"
        style="padding: 0px;"
      >
        <a
          aria-current="page"
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-14 active"
          href="/"
        >
          <div
            class="MuiListItemText-root emotion-15"
            style="text-transform: uppercase;"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Dashboard
            </span>
          </div>
        </a>
        <a
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-14"
          href="/devices"
        >
          <div
            class="MuiListItemText-root emotion-15"
            style="text-transform: uppercase;"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Devices
            </span>
          </div>
        </a>
        <a
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-14"
          href="/releases"
        >
          <div
            class="MuiListItemText-root emotion-15"
            style="text-transform: uppercase;"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Releases
            </span>
          </div>
        </a>
        <a
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-14"
          href="/deployments"
        >
          <div
            class="MuiListItemText-root emotion-15"
            style="text-transform: uppercase;"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Deployments
            </span>
          </div>
        </a>
        <a
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-14"
          href="/auditlog"
        >
          <div
            class="MuiListItemText-root emotion-15"
            style="text-transform: uppercase;"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Audit log
            </span>
          </div>
        </a>
      </ul>
      <ul
        class="MuiList-root MuiList-padding emotion-29"
      >
        <a
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding navLink leftNav emotion-30"
          href="/help"
        >
          <div
            class="MuiListItemText-root emotion-15"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              Help & support
            </span>
          </div>
        </a>
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding emotion-30"
        >
          <div
            class="MuiListItemText-root MuiListItemText-multiline emotion-34"
          >
            <span
              class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary emotion-16"
            >
              <div
                class="clickable slightly-smaller"
                data-mui-internal-clone-element="true"
              >
                Version: next
              </div>
            </span>
            <p
              class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary emotion-36"
            >
              <a
                class="emotion-37"
                href="https://docs.mender.io/development/release-information/open-source-licenses"
                rel=""
                target="_blank"
              >
                License information
              </a>
            </p>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="rightFluid container"
    >
      <h4
        class="margin-left-small"
      >
        Dashboard
      </h4>
      <div
        class="emotion-38"
      >
        <div
          class="emotion-39"
        >
          <div
            class="dashboard"
          >
            <div
              class="widget "
            >
              <div
                class="flexbox widgetHeader"
              >
                <div
                  class="flexbox center-aligned"
                >
                  Accepted devices 
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium margin-left-small green emotion-6"
                    data-testid="CheckCircleIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="flexbox column widgetMainContent"
              >
                <div
                  class="counter"
                >
                  2
                </div>
              </div>
            </div>
            <div
              class="relative"
            >
              <a
                class="MuiButtonBase-root MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary MuiFab-root MuiFab-circular MuiFab-sizeLarge MuiFab-primary absolute emotion-41"
                href="/devices/pending"
                tabindex="0"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                  />
                </svg>
                <span
                  class="MuiTouchRipple-root emotion-11"
                />
              </a>
              <div
                class="widget "
              >
                <div
                  class="flexbox widgetHeader"
                >
                  Pending devices
                </div>
                <div
                  class="flexbox column widgetMainContent"
                >
                  <div
                    class="counter"
                  >
                    1
                  </div>
                  <span
                    class="link"
                  >
                    View details
                  </span>
                </div>
              </div>
            </div>
            <div
              class="widget flexbox centered"
            >
              <p
                class="muted"
                style="max-width: 200px;"
              >
                + connect more devices
              </p>
            </div>
          </div>
          <div
            class="dashboard margin-bottom-large"
          >
            <div
              class="widget"
            >
              <div
                class="flexbox center-aligned  emotion-44"
                style="align-items: end;"
              >
                <div
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="MuiChip-root MuiChip-filled MuiChip-sizeMedium MuiChip-colorDefault MuiChip-filledDefault emotion-45"
                  >
                    <span
                      class="MuiChip-label MuiChip-labelMedium emotion-46"
                    >
                      Enterprise
                    </span>
                  </div>
                </div>
                <div
                  class=""
                  data-mui-internal-clone-element="true"
                >
                  <div
                    class="relative"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium  emotion-47"
                      data-testid="HelpIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 17h-2v-2h2zm2.07-7.75-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25"
                      />
                    </svg>
                    <div
                      class="emotion-48 "
                    />
                  </div>
                </div>
              </div>
              <div
                class="flexbox centered muted emotion-49"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-6"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6z"
                  />
                </svg>
                <span
                  class="emotion-49"
                >
                  add a widget
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-52 deployments"
        >
          <div
            class="dashboard flexbox column"
            style="grid-template-columns: 1fr; row-gap: 10px;"
          >
            <h4
              class="margin-bottom-none margin-left-small"
            >
              Recent deployments
            </h4>
            <h5
              class="margin-bottom-none"
            >
              Pending
            </h5>
            <div
              class="clickable emotion-53"
            >
              <div>
                <div>
                  r1
                </div>
                <div
                  class=""
                  title="test deployment"
                >
                  test deployment
                </div>
              </div>
              <div
                class="flexbox center-aligned"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-54"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M12,10.5A1.5,1.5 0 0,1 13.5,12A1.5,1.5 0 0,1 12,13.5A1.5,1.5 0 0,1 10.5,12A1.5,1.5 0 0,1 12,10.5M7.5,10.5A1.5,1.5 0 0,1 9,12A1.5,1.5 0 0,1 7.5,13.5A1.5,1.5 0 0,1 6,12A1.5,1.5 0 0,1 7.5,10.5M16.5,10.5A1.5,1.5 0 0,1 18,12A1.5,1.5 0 0,1 16.5,13.5A1.5,1.5 0 0,1 15,12A1.5,1.5 0 0,1 16.5,10.5Z"
                  />
                </svg>
                <span
                  class="margin-left-small"
                >
                  Queued to start
                </span>
              </div>
            </div>
            <div
              class="clickable emotion-53"
            >
              <div>
                <div>
                  r1
                </div>
                <div
                  class=""
                  title="test deployment 2"
                >
                  test deployment 2
                </div>
              </div>
              <div
                class="flexbox center-aligned"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-54"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M12,10.5A1.5,1.5 0 0,1 13.5,12A1.5,1.5 0 0,1 12,13.5A1.5,1.5 0 0,1 10.5,12A1.5,1.5 0 0,1 12,10.5M7.5,10.5A1.5,1.5 0 0,1 9,12A1.5,1.5 0 0,1 7.5,13.5A1.5,1.5 0 0,1 6,12A1.5,1.5 0 0,1 7.5,10.5M16.5,10.5A1.5,1.5 0 0,1 18,12A1.5,1.5 0 0,1 16.5,13.5A1.5,1.5 0 0,1 15,12A1.5,1.5 0 0,1 16.5,10.5Z"
                  />
                </svg>
                <span
                  class="margin-left-small"
                >
                  Queued to start
                </span>
              </div>
            </div>
            <h5
              class="margin-bottom-none"
            >
              In Progress
            </h5>
            <div
              class="clickable emotion-53"
            >
              <div>
                <div>
                  r1
                </div>
                <div
                  class=""
                  title="test deployment"
                >
                  test deployment
                </div>
              </div>
              <div
                class="relative emotion-58 minimal "
              >
                <div
                  class="chart-container"
                >
                  <div
                    class="progress-chart relative detailed"
                  >
                    <div
                      class="progress-step"
                      style="left: 0%; width: 100%;"
                    >
                      <div
                        class="progress-bar"
                        style="width: 100%; background-color: rgb(170, 170, 170);"
                      />
                      <div
                        style="display: contents;"
                      >
                        <div
                          class="progress-bar green"
                          style="width: 0%;"
                        />
                        <div
                          class="progress-bar warning"
                          style="left: 0%; width: 0%;"
                        />
                      </div>
                    </div>
                    <div
                      class="progress-step relative flexbox progress-step-total"
                    >
                      <div
                        class="progress-bar"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="clickable emotion-53"
            >
              <div>
                <div>
                  r1
                </div>
                <div
                  class=""
                  title="test deployment 2"
                >
                  test deployment 2
                </div>
              </div>
              <div
                class="flexbox center-aligned"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-54"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M12,10.5A1.5,1.5 0 0,1 13.5,12A1.5,1.5 0 0,1 12,13.5A1.5,1.5 0 0,1 10.5,12A1.5,1.5 0 0,1 12,10.5M7.5,10.5A1.5,1.5 0 0,1 9,12A1.5,1.5 0 0,1 7.5,13.5A1.5,1.5 0 0,1 6,12A1.5,1.5 0 0,1 7.5,10.5M16.5,10.5A1.5,1.5 0 0,1 18,12A1.5,1.5 0 0,1 16.5,13.5A1.5,1.5 0 0,1 15,12A1.5,1.5 0 0,1 16.5,10.5Z"
                  />
                </svg>
                <span
                  class="margin-left-small"
                >
                  Queued to start
                </span>
              </div>
            </div>
            <h5
              class="margin-bottom-none"
            >
              Finished
            </h5>
            <div
              class="emotion-61"
            >
              <time
                class="muted slightly-smaller"
                datetime="2019-01-13T13:15:00+00:00"
              >
                2019-01-13 13:15
              </time>
              <div
                class="clickable emotion-53"
              >
                <div>
                  <div>
                    r1
                  </div>
                  <div
                    class=""
                    title="test deployment"
                  >
                    test deployment
                  </div>
                </div>
                <div
                  class="emotion-63"
                >
                  <div
                    class="flexbox emotion-64 "
                  >
                    <div
                      aria-label="Skipped"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="skipped_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                    <div
                      aria-label="Pending"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="pending_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                    <div
                      aria-label="In progress"
                      class="flexbox centered "
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="progress_status.png"
                      />
                      <div
                        class="status"
                      >
                        1
                      </div>
                    </div>
                    <div
                      aria-label="Successful"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="success_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                    <div
                      aria-label="Failed"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="error_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-61"
            >
              <time
                class="muted slightly-smaller"
                datetime="2019-01-13T13:15:00+00:00"
              >
                2019-01-13 13:15
              </time>
              <div
                class="clickable emotion-53"
              >
                <div>
                  <div>
                    r1
                  </div>
                  <div
                    class=""
                    title="test deployment 2"
                  >
                    test deployment 2
                  </div>
                </div>
                <div
                  class="emotion-63"
                >
                  <div
                    class="flexbox emotion-64 "
                  >
                    <div
                      aria-label="Skipped"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="skipped_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                    <div
                      aria-label="Pending"
                      class="flexbox centered "
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="pending_status.png"
                      />
                      <div
                        class="status"
                      >
                        1
                      </div>
                    </div>
                    <div
                      aria-label="In progress"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="progress_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                    <div
                      aria-label="Successful"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="success_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                    <div
                      aria-label="Failed"
                      class="flexbox centered disabled"
                      data-mui-internal-clone-element="true"
                    >
                      <img
                        src="error_status.png"
                      />
                      <div
                        class="status"
                      >
                        0
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <a
              class="margin-top margin-bottom-large"
              href="/deployments"
            >
              See all deployments
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
  .emotion-0 {
  position: fixed;
  display: grid;
  bottom: 0;
  grid-template-rows: min-content;
  height: max-content;
  padding: 0 16pxpx;
  overflow: hidden;
  width: 100%;
  z-iindex: 10000px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
